deploy/uat/ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: 20.207.200.225.sslip.io   #這邊改成你的Cluster2叢集的{IP}.sslip.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: vote-ui-dev-svc
                port:
                  number: 80
